# propositional-logic

./: README.md  propositional-logic.cabal  type-level-experiment.hs
src/: NaturalDeduction.hs  Semantics.hs  Syntax.hs
test/: Main.hs
test/Test/: Prop.hs
